manifests/oauth2-cas-proxy/03-deploymentconfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: oauth2-cas-proxy
  namespace: matrix
  annotations:
    image.openshift.io/triggers: |
      [
        {"from":{"kind":"ImageStreamTag","name":"oauth2-cas-proxy:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"oauth2-cas-proxy\")].image"}
      ]
  labels:
    app: synapse
    service: oauth2-cas-proxy
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - oauth2-cas-proxy
        from:
          kind: ImageStreamTag
          namespace: matrix
          name: "oauth2-cas-proxy:latest"
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: synapse
    service: oauth2-cas-proxy
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: synapse
        service: oauth2-cas-proxy
    spec:
      containers:
        - name: oauth2-cas-proxy
          image: ""
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 30Mi
            limits:
              cpu: 200m
              memory: 60Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
